Complete reference + analysis of visualizations

--- a/group24_report-Updated.ipynb
+++ b/group24_report-Updated.ipynb
@@ -8482,6 +8482,14 @@
   },
   {
    "cell_type": "markdown",
+   "id": "6db88f43-cad8-4b68-8c78-82a8c9b2e97c",
+   "metadata": {},
+   "source": [
+    "By analyzing pair graph and scatter plots, we could see that the relationship between `age` and `presence`, and relationship between `max heart rate` and `presence` are relatively strong. The relationship between `resting blood pressure` and `presence`, the relationship between `cholesterol`and `presence`, the relationship between `chest pain type` and `presence` are weaker. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "590e4f04-8d14-4551-afb1-75331c1187d5",
    "metadata": {
     "tags": []
@@ -9765,6 +9773,8 @@
    "metadata": {},
    "source": [
     "# Works Cited / References\n",
+    "Bots, Sophie, et al. “Sex differences in coronary heart disease and stroke mortality: a global assessment of the effect of ageing between 1980 and 2010”. BML Global Health, BML Journals, 27 March, 2017, https://gh.bmj.com/content/2/2/e000298.info. Accessed 7 December 2023. \n",
+    "\n",
     "Haasenritter, Jörg, et al. “Does the patient with chest pain have a coronary heart disease? Diagnostic value of single symptoms and signs – a meta-analysis.” National Library of Medicine, PubMed Central, https://www.ncbi.nlm.nih.gov/pmc/articles/PMC3490454/. Accessed 7 December 2023.\n",
     "\n",
     "Hill, Joseph A. “Under pressure: How blood pressure affects heart disease risk | Heart.” UT Southwestern Medical Center, 6 June 2016, https://utswmed.org/medblog/high-blood-pressure-heart-disease/. Accessed 7 December 2023.\n",
