Some typo fixed

--- a/group24_report-Updated.ipynb
+++ b/group24_report-Updated.ipynb
@@ -21,7 +21,7 @@
     "Heart diseases are conditions that affect the heart's structure and function. They can develop into a serious stage and threaten someone’s life, so it is very important to make an early diagnosis and apply treatment as soon as possible. Heart diseases come in many different forms: coronary artery disease, heart rhythm disorders, heart valve disease, cardiomyopathy, congenital heart disease, pericardium, and heart failure. In our research, we will be analyzing coronary angiography disease which is the narrowing of blood vessels and constriction of proper blood flow.\n",
     "\n",
     "### Question\n",
-    "Can we use classification to classify the presence and severity of angiographic disease in a patient based on their age, sex, resting blood pressure, cholesterol level, maximum heart rate, and chest pain?    \n",
+    "Can we use classification to classify the presence of coronary heart disease in a patient based on their age, sex, resting blood pressure, cholesterol level, maximum heart rate, and chest pain type?    \n",
     "\n",
     "### Dataset \n",
     "The dataset is collected by researchers in hospitals from Cleveland, Hungary, Long Beach California, and Switzerland. The dataset can be found here https://archive.ics.uci.edu/dataset/45/heart+disease. The dataset orignally contained 76 attributes but researchers have reduced it to 14 attributes. Them being,\n",
@@ -29,7 +29,7 @@
     "- `sex`\n",
     "\n",
     "        -- Value 1: Male\n",
-    "        -- Value 2: Female\n",
+    "        -- Value 0: Female\n",
     "- `cp` - chest pain type\n",
     "\n",
     "        -- Value 1: typical angina\n",
@@ -38,7 +38,7 @@
     "        -- Value 4: asymptomatic\n",
     "- `trestbps` - resting blood pressure (in mm Hg on admission to the hospital)\n",
     "- `chol` - serum cholesterol in mg/dl\n",
-    "- `fbs`- (fasting blood sugar > 120 mg/dl)  (1 = true; 0 = false)\n",
+    "- `fbs`- fasting blood sugar > 120 mg/dl  (1 = true; 0 = false)\n",
     "- `restecg` - resting electrocardiographic results\n",
     "\n",
     "        -- Value 0: normal\n",
@@ -53,7 +53,7 @@
     "        -- Value 1: upsloping\n",
     "        -- Value 2: flat\n",
     "        -- Value 3: downsloping\n",
-    "- `ca` - number of major vessels (0-3)\n",
+    "- `ca` - number of major vessels (0-3) colored by flourosopy\n",
     "- `thal`\n",
     "\n",
     "        -- Value 3: normal\n",
@@ -77,6 +77,7 @@
     "## Method\n",
     "\n",
     "We will conduct our data analysis by building a K-Nearest Neighbors classification model to predict for the presence of heart disease. We will use the variables Age, Sex, Resting Blood Pressure (mm Hg), Cholesterol (mg/dl), Max Heart Rate, and Type of Chest Pain as our predictors and predict for the presence of heart disease in a patient.\n",
+    "Since our model is built for medical purposes, all of our predictors are justified with literature related to coronary artery disease. \n",
     "\n",
     "**Reasoning for predictor variables:**\n",
     "\n",
@@ -9287,6 +9288,14 @@
    "metadata": {},
    "source": [
     "*Figure 3 - Confusion matrix visualized as a graph*"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "35e682d2-8925-486b-96ee-32d6931964cd",
+   "metadata": {},
+   "source": [
+    "Recall=25/35*100%=71.43%"
    ]
   },
   {
